mise en place de décorateurs spécifique pour les autorisations, implémentation des erreurs dans le yaml
